kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanameos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanameos
  template:
    metadata:
      labels:
        app: kanameos
    spec:
      containers:
      - name: kanameos
        image: kanameos:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: "/var/lib/kanameos"
          name: kanameos-storage
      volumes:
      - name: kanameos-storage
        persistentVolumeClaim:
          claimName: kanameos-pvc
