kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanameos
spec:
  selector:
    app: kanameos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
